--- a/src/global.css
+++ b/src/global.css
@@ -15,8 +15,9 @@
   --dark-grey: #011917;
   --dark-red: #620D36;
 
-  --font-l: clamp(3.5rem, 4vw + 1rem, 3rem);
-  --font-m: 2.5rem;
+  --font-xl: clamp(3.5rem, 4vw + 1rem, 3rem);
+  --font-l: 2.5rem;
+  --font-m: 1.5rem;
   --font-s: 1rem;
 }
 
@@ -38,25 +39,44 @@ main {
 
 h1,
 h2,
-h3 {
+h3,
+.rotating-text {
   margin: 0 0 5px 0;
   color: var(--dark-green);
   font-family: 'Merriweather', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-  font-size: var(--font-l);
+  font-size: var(--font-xl);
   font-weight: 500;
 }
 
+.rotating-text-container {
+  display: inline-block;
+}
+
+.rotating-text {
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 2px solid;
+  width: 0;
+  animation: typing 1.5s steps(30, end) forwards, blinking 1s infinite;
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blinking {
+  0% {border-right-color: transparent}
+  50% {border-right-color: var(--dark-green)}
+  100% {border-right-color: transparent}
+}
+
 h2 {
-  font-size: var(--font-m);
+  font-size: var(--font-l);
 }
 
 h3, h4 {
-  font-size: var(--font-s);
-}
-
-[role="button"] {
-  background-color: var(--dark-green);
-  color: var(--light-yellow);
+  font-size: var(--font-m);
 }
 
 section {
